--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "chilligames_server_side",
+  
   "version": "0.0.0",
   "description": "Chilligames_server_side",
   "main": "Admin.js",
   "author": {
-    "name": ""
+    "name": "Hossyn Assghary Firuzabadi",
+    "email": "hossynassghary@gmail.com",
+    "url": "https://chilligames.ir"
   },
   "dependencies": {
+    
     "express": "^4.17.1",
     "mongodb": "^3.2.7"
   }
