--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "chilligames_server_side",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "description": "Chilligames_server_side",
-  "main": "Admin.js",
+  "main": "API.js",
   "author": {
     "name": "Hossyn Assghary Firuzabadi",
     "email": "hossynassghary@gmail.com",
     "url": "https://chilligames.ir"
+
   },
+  
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.3.2"
+      
   }
 }
